# enjoy-algorithm

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build.gradle  settings.gradle
.claude/: settings.local.json
algorithm-puzzles/: 3-1.py  maximum_subarray_sum.py  q43_2.js  q43_2.py
algospot/: build.gradle
baekjoon/: README.md  build.gradle
baekjoon/src/main/c/: 1003.c  10889.c  10889_.c  4493.c
baekjoon/src/main/go/: 1000.go  1001.go  10178.go  10707.go  10821.go  2475.go  2563.go  2750.go  2752.go  6679.go  8741.go  9085.go  9610.go
baekjoon/src/main/groovy/: g1000.groovy
baekjoon/src/main/haskell/: H1000.hs
baekjoon/src/main/java/: HeapOOM.java  JavaVMStackSOF_1.java  JavaVMStackSOF_2.java
baekjoon/src/main/java/P1918/: Main.java
baekjoon/src/main/java/p1000/: Main.java  Main2.java
baekjoon/src/main/java/p1001/: Main.java
baekjoon/src/main/java/p1002/: Main.java  Test.java
baekjoon/src/main/java/p10026/: Main.java
baekjoon/src/main/java/p1003/: Main.java
baekjoon/src/main/java/p10039/: Main.java
baekjoon/src/main/java/p1004/: Main.java
baekjoon/src/main/java/p1008/: Main.java
baekjoon/src/main/java/p1009/: Main.java
baekjoon/src/main/java/p10093/: Main.java
baekjoon/src/main/java/p1010/: Main.java
baekjoon/src/main/java/p10101/: Main.java
baekjoon/src/main/java/p10102/: Main.java
baekjoon/src/main/java/p10103/: Main.java
baekjoon/src/main/java/p1011/: Main.java
baekjoon/src/main/java/p1012/: Main.java
baekjoon/src/main/java/p1015/: Main.java
baekjoon/src/main/java/p10156/: Main.java
baekjoon/src/main/java/p10162/: Main.java
baekjoon/src/main/java/p10163/: Main.java
baekjoon/src/main/java/p10170/: Main.java
baekjoon/src/main/java/p10171/: Main.java
baekjoon/src/main/java/p10173/: Main.java
baekjoon/src/main/java/p10174/: Main.java
baekjoon/src/main/java/p10175/: Main.java
baekjoon/src/main/java/p10178/: Main.java
baekjoon/src/main/java/p10179/: Main.java
baekjoon/src/main/java/p1018/: Main.java
baekjoon/src/main/java/p1021/: Main.java
baekjoon/src/main/java/p10214/: Main.java
baekjoon/src/main/java/p10250/: Main.java
baekjoon/src/main/java/p1026/: Main.java
baekjoon/src/main/java/p1032/: Main.java
baekjoon/src/main/java/p1037/: Main.java
baekjoon/src/main/java/p10384/: Main.java
baekjoon/src/main/java/p10409/: Main.java
baekjoon/src/main/java/p10419/: Main.java
baekjoon/src/main/java/p10420/: Main.java
baekjoon/src/main/java/p10422/: Main.java
baekjoon/src/main/java/p10430/: Main.java
baekjoon/src/main/java/p10451/: Main.java
baekjoon/src/main/java/p10453/: Main.java
baekjoon/src/main/java/p10474/: Main.java
baekjoon/src/main/java/p10480/: Main.java
baekjoon/src/main/java/p10539/: Main.java
baekjoon/src/main/java/p10563/: Main.java
baekjoon/src/main/java/p10569/: Main.java
baekjoon/src/main/java/p1057/: Main.java
baekjoon/src/main/java/p10570/: Main.java
baekjoon/src/main/java/p1065/: Main.java
baekjoon/src/main/java/p1066/: Main.java
baekjoon/src/main/java/p1067/: Main.java
baekjoon/src/main/java/p10699/: Main.java
baekjoon/src/main/java/p10707/: Main.java
baekjoon/src/main/java/p10709/: Main.java
baekjoon/src/main/java/p1074/: Main.java
baekjoon/src/main/java/p1075/: Main.java
baekjoon/src/main/java/p10757/: Main.java
baekjoon/src/main/java/p1076/: Main.java
baekjoon/src/main/java/p10768/: Main.java
baekjoon/src/main/java/p10773/: Main.java
baekjoon/src/main/java/p10797/: Main.java
baekjoon/src/main/java/p10798/: Main.java
baekjoon/src/main/java/p10799/: Main.java  Main2.java
baekjoon/src/main/java/p10801/: Main.java
baekjoon/src/main/java/p10804/: Main.java
baekjoon/src/main/java/p10807/: Main.java
baekjoon/src/main/java/p10808/: Main.java
baekjoon/src/main/java/p10809/: Main.java
baekjoon/src/main/java/p10810/: Main.java
baekjoon/src/main/kotlin/: 11050.kt  2557.kt  K11050.kt  K1991.kt  K2293.kt  K2754.kt
baekjoon/src/main/python/: P10211.py  P14382.py  P17478.py  P1991.py  p1806.py
baekjoon/src/main/python3/: 2741.py  P10934.py  P11650.py  P17478.py  P1991.py
baekjoon/src/main/scala/: S1934.scala  S1991.scala  S2750.scala  S522088.scala  s1934.scala  s2750.scala  s522088.scala
basic/: build.gradle
codingdojang/: build.gradle
codingdojang/src/main/java/: ASCIIArtN.java  AllThreeTime.java  Amazon.java  AmusementPark.java  AnEasyProblem.java  AntSequence.java  Anything.java  AustralianVoting.java  Balances.java  BubbleSort.java  CandlesticksChart.java  CardReverse.java  CostEffectiveness.java  CreateTheLargestNumber.java  Currency.java  DashInsert.java  Daum.java  DecimalFormatter.java  DuplicateNumbers.java  EuclidProblem.java  EvenFibonacciNumbers.java  EveryOtherDigit.java  Fibonacci.java  Fibonacci2.java  Fibonacci3.java  FileSort.java  FindPrimeNumber.java  FourBoxes.java  FromTo.java  HarryPotter.java  HindexGindex.java  HourMinute.java  IceCreamFactory.java  InsertionSort.java  Intervals.java  InvestmentInStocks.java  JollyJumpers.java  JosephusProblem.java  LCDDisplay.java  LISPCalculator.java  (+47 more)
gradle/: versions.gradle
gradle/wrapper/: gradle-wrapper.properties
hackerrank/: build.gradle
jungol/: hanoi.c  jungol.sln  jungol.vcxproj  jungol.vcxproj.filters
jungol/Debug/: vc140.idb
jungol/Debug/jungol.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  jungol.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
jungol/Release/: jungol.iobj  jungol.ipdb
jungol/Release/jungol.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  jungol.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
mailprogramming/: build.gradle
mailprogramming/src/main/java/: Question1.java  Question10.java  Question11.java  Question13.java  Question2.java  Question3.java  Question43.java  Question5.java  Question7.java  Question8.java  Question9.java
programmers/src/main/java/: PermutationsBFS.java
programmers/src/main/python/: ChoosingDice.py  N+1CardGame.py  SteppingStone.py  TravelRoute.py
programming-contets/: README.md
(+1359 files in other folders)
