cmake_minimum_required(VERSION 3.8)
project(enjoy_algorithm)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        .gradle/3.5-rc-2/file-changes/last-build.bin
        .gradle/3.5-rc-2/fileContent/fileContent.lock
        .gradle/3.5-rc-2/taskHistory/fileHashes.bin
        .gradle/3.5-rc-2/taskHistory/fileSnapshots.bin
        .gradle/3.5-rc-2/taskHistory/taskHistory.bin
        .gradle/3.5-rc-2/taskHistory/taskHistory.lock
        .gradle/buildOutputCleanup/built.bin
        .gradle/buildOutputCleanup/cache.properties
        .gradle/buildOutputCleanup/cache.properties.lock
        .idea/libraries/Clojure_1_8_0.xml
        .idea/libraries/Gradle__junit_junit_4_12.xml
        .idea/libraries/Gradle__org_hamcrest_hamcrest_core_1_3.xml
        .idea/libraries/Gradle__org_jetbrains_annotations_13_0.xml
        .idea/libraries/Gradle__org_jetbrains_kotlin_kotlin_stdlib_1_1_4_2.xml
        .idea/libraries/Gradle__org_jetbrains_kotlin_kotlin_stdlib_jre7_1_1_4_2.xml
        .idea/libraries/Gradle__org_jetbrains_kotlin_kotlin_stdlib_jre8_1_1_4_2.xml
        .idea/modules/algospot/algospot.iml
        .idea/modules/algospot/algospot_main.iml
        .idea/modules/algospot/algospot_test.iml
        .idea/modules/baekjoon/baekjoon.iml
        .idea/modules/baekjoon/baekjoon_main.iml
        .idea/modules/baekjoon/baekjoon_test.iml
        .idea/modules/basic/basic_main.iml
        .idea/modules/basic/basic_test.iml
        .idea/modules/codingdojang/codingdojang.iml
        .idea/modules/codingdojang/codingdojang_main.iml
        .idea/modules/codingdojang/codingdojang_test.iml
        .idea/modules/basic.iml
        .idea/modules/enjoy-algorithm_main.iml
        .idea/modules/enjoy-algorithm_test.iml
        .idea/sonarlint/issuestore/8/e/8ec9a00bfd09b3190ac6b22251dbb1aa95a0579d
        .idea/sonarlint/issuestore/a/5/a5cc2925ca8258af241be7e5b0381edf30266302
        .idea/sonarlint/issuestore/a/e/aef2afe4ebb4b6234c19521aaa4322c8c351b05f
        .idea/sonarlint/issuestore/f/0/f07866736216be0ee2aba49e392191aeae700a35
        .idea/sonarlint/issuestore/index.pb
        .idea/compiler.xml
        .idea/encodings.xml
        .idea/gradle.xml
        .idea/kotlinc.xml
        .idea/misc.xml
        .idea/modules.xml
        .idea/uiDesigner.xml
        .idea/vcs.xml
        .idea/workspace.xml
        algospot/build.gradle
        baekjoon/src/main/clojure/lib/clojure-1.8.0.jar
        baekjoon/src/main/clojure/2557.clj
        baekjoon/src/main/clojure/clojure.iml
        baekjoon/src/main/go/1000.go
        baekjoon/src/main/groovy/g1000.groovy
        baekjoon/src/main/haskell/H1000.hs
        baekjoon/src/main/java/p1000/Main.java
        baekjoon/src/main/java/p1001/Main.java
        baekjoon/src/main/java/p10039/Main.java
        baekjoon/src/main/java/p1008/Main.java
        baekjoon/src/main/java/p1011/Main.java
        baekjoon/src/main/java/p10250/Main.java
        baekjoon/src/main/java/p1065/Main.java
        baekjoon/src/main/java/p1066/Main.java
        baekjoon/src/main/java/p10809/Main.java
        baekjoon/src/main/java/p10817/Main.java
        baekjoon/src/main/java/p10828/Main.java
        baekjoon/src/main/java/p10845/Main.java
        baekjoon/src/main/java/p10871/Main.java
        baekjoon/src/main/java/p1094/Main.java
        baekjoon/src/main/java/p10989/Main.java
        baekjoon/src/main/java/p10989/Main2.java
        baekjoon/src/main/java/p1110/Main.java
        baekjoon/src/main/java/p1152/Main.java
        baekjoon/src/main/java/p1157/Main.java
        baekjoon/src/main/java/p11654/Main.java
        baekjoon/src/main/java/p11720/Main.java
        baekjoon/src/main/java/p11721/Main.java
        baekjoon/src/main/java/p1181/Main.java
        baekjoon/src/main/java/p1193/Main.java
        baekjoon/src/main/java/p1316/Main.java
        baekjoon/src/main/java/p13241/Main.java
        baekjoon/src/main/java/p1427/Main.java
        baekjoon/src/main/java/p1475/Main.java
        baekjoon/src/main/java/p1546/Main.java
        baekjoon/src/main/java/p1874/Main.java
        baekjoon/src/main/java/p1924/Main.java
        baekjoon/src/main/java/p1929/Main.java
        baekjoon/src/main/java/p1934/Main.java
        baekjoon/src/main/java/p1977/Main.java
        baekjoon/src/main/java/p1978/Main.java
        baekjoon/src/main/java/p2108/Main.java
        baekjoon/src/main/java/p2292/Main.java
        baekjoon/src/main/java/p2438/Main.java
        baekjoon/src/main/java/p2439/Main.java
        baekjoon/src/main/java/p2440/Main.java
        baekjoon/src/main/java/p2441/Main.java
        baekjoon/src/main/java/p2448/Main.java
        baekjoon/src/main/java/p2522/Main.java
        baekjoon/src/main/java/p2577/Main.java
        baekjoon/src/main/java/p2581/Main.java
        baekjoon/src/main/java/p2609/Main.java
        baekjoon/src/main/java/p2675/Main.java
        baekjoon/src/main/java/p2747/Main.java
        baekjoon/src/main/java/p2750/Main.java
        baekjoon/src/main/java/p2751/Main.java
        baekjoon/src/main/java/p2775/Main.java
        baekjoon/src/main/java/p2908/Main.java
        baekjoon/src/main/java/p2920/Main.java
        baekjoon/src/main/java/p2941/Main.java
        baekjoon/src/main/java/p4344/Main.java
        baekjoon/src/main/java/p4673/Main.java
        baekjoon/src/main/java/p4948/Main.java
        baekjoon/src/main/java/p5622/Main.java
        baekjoon/src/main/java/p6064/Main.java
        baekjoon/src/main/java/p8393/Main.java
        baekjoon/src/main/java/p8958/Main.java
        baekjoon/src/main/java/p9012/Main.java
        baekjoon/src/main/java/p9020/Main.java
        baekjoon/src/main/java/p9426/Main.java
        baekjoon/src/main/java/p9498/Main.java
        baekjoon/src/main/kotlin/2557.kt
        baekjoon/src/main/python3/2557.py
        baekjoon/src/main/scala/s1934.scala
        baekjoon/src/main/main.iml
        baekjoon/build.gradle
        basic/src/main/java/sort/BubbleSort.java
        basic/src/main/java/sort/InsertionSort.java
        basic/src/main/java/sort/QuickSelect.java
        basic/src/main/java/sort/SelectSort.java
        basic/src/main/java/tree/FenwickTree.java
        basic/src/main/java/tree/SegmentTree.java
        basic/src/test/java/sort/BubbleSortTest.java
        basic/build.gradle
        codingdojang/src/main/java/AllThreeTime.java
        codingdojang/src/main/java/Amazon.java
        codingdojang/src/main/java/AmusementPark.java
        codingdojang/src/main/java/AmusementPark.txt
        codingdojang/src/main/java/AnEasyProblem.java
        codingdojang/src/main/java/AntSequence.java
        codingdojang/src/main/java/Anything.java
        codingdojang/src/main/java/ASCIIArtN.java
        codingdojang/src/main/java/AustralianVoting.java
        codingdojang/src/main/java/AustralianVoting.txt
        codingdojang/src/main/java/Balances.java
        codingdojang/src/main/java/BubbleSort.java
        codingdojang/src/main/java/CandlesticksChart.java
        codingdojang/src/main/java/CardReverse.java
        codingdojang/src/main/java/CostEffectiveness.java
        codingdojang/src/main/java/CreateTheLargestNumber.java
        codingdojang/src/main/java/Currency.java
        codingdojang/src/main/java/DashInsert.java
        codingdojang/src/main/java/Daum.java
        codingdojang/src/main/java/DecimalFormatter.java
        codingdojang/src/main/java/DuplicateNumbers.java
        codingdojang/src/main/java/EuclidProblem.java
        codingdojang/src/main/java/EvenFibonacciNumbers.java
        codingdojang/src/main/java/EveryOtherDigit.java
        codingdojang/src/main/java/Fibonacci.java
        codingdojang/src/main/java/Fibonacci2.java
        codingdojang/src/main/java/Fibonacci3.java
        codingdojang/src/main/java/FileSort.java
        codingdojang/src/main/java/FileSort.txt
        codingdojang/src/main/java/FindPrimeNumber.java
        codingdojang/src/main/java/FourBoxes.java
        codingdojang/src/main/java/FourBoxes.txt
        codingdojang/src/main/java/FromTo.java
        codingdojang/src/main/java/HappyNumber.java
        codingdojang/src/main/java/HarryPotter.java
        codingdojang/src/main/java/HindexGindex.java
        codingdojang/src/main/java/HourMinute.java
        codingdojang/src/main/java/IceCreamFactory.java
        codingdojang/src/main/java/InsertionSort.java
        codingdojang/src/main/java/Intervals.java
        codingdojang/src/main/java/InvestmentInStocks.java
        codingdojang/src/main/java/InvestmentInStocks.txt
        codingdojang/src/main/java/JollyJumpers.java
        codingdojang/src/main/java/JosephusProblem.java
        codingdojang/src/main/java/LandMineSearch.java
        codingdojang/src/main/java/LandMineSearch.txt
        codingdojang/src/main/java/LargestPrimeFactor.java
        codingdojang/src/main/java/LargestProductionGrid.java
        codingdojang/src/main/java/LargestProductionGrid.txt
        codingdojang/src/main/java/LargestSubset.java
        codingdojang/src/main/java/LCDDisplay.java
        codingdojang/src/main/java/LightMoreLight.java
        codingdojang/src/main/java/LISPCalculator.java
        codingdojang/src/main/java/ListRotation.java
        codingdojang/src/main/java/MatrixSum.java
        codingdojang/src/main/java/MatrixSum.txt
        codingdojang/src/main/java/MaxMinSum.java
        codingdojang/src/main/java/MemoryAllocation.java
        codingdojang/src/main/java/MorseCodeDecipher.java
        codingdojang/src/main/java/Ndecimal.java
        codingdojang/src/main/java/NumberOfBackwardZeros.java
        codingdojang/src/main/java/NumberPrint.java
        codingdojang/src/main/java/OneEditApart.java
        codingdojang/src/main/java/Ones.java
        codingdojang/src/main/java/OutsideArea.java
        codingdojang/src/main/java/Pageable.java
        codingdojang/src/main/java/Panda.java
        codingdojang/src/main/java/Panda.txt
        codingdojang/src/main/java/PartialTextSearch.java
        codingdojang/src/main/java/PhoneNumber.java
        codingdojang/src/main/java/PhoneNumber.txt
        codingdojang/src/main/java/PingPong.java
        codingdojang/src/main/java/PotholeCase.java
        codingdojang/src/main/java/PrimaryArithmetic.java
        codingdojang/src/main/java/PrintingOXs.java
        codingdojang/src/main/java/Prisoner.java
        codingdojang/src/main/java/ReverseAndAdd.java
        codingdojang/src/main/java/ReverseSpiralArray.java
        codingdojang/src/main/java/RightAngledTriangle.java
        codingdojang/src/main/java/SafePassage.java
        codingdojang/src/main/java/SameNumber.java
        codingdojang/src/main/java/SerialNumber.java
        codingdojang/src/main/java/SimpleBalancedParentheses.java
        codingdojang/src/main/java/SlidingWindow.java
        codingdojang/src/main/java/SmallestMultiple.java
        codingdojang/src/main/java/SmallestRange.java
        codingdojang/src/main/java/SpecialSort.java
        codingdojang/src/main/java/Stairs.java
        codingdojang/src/main/java/Steps.java
        codingdojang/src/main/java/StringCompression.java
        codingdojang/src/main/java/Synapsoft.java
        codingdojang/src/main/java/TabConverterSpace.java
        codingdojang/src/main/java/TabConverterSpace.txt
        codingdojang/src/main/java/TheKnightsOfTheRoundTable.java
        codingdojang/src/main/java/ThreeN1Problem.java
        codingdojang/src/main/java/ThreeN1Problem.txt
        codingdojang/src/main/java/Truck.java
        codingdojang/src/main/java/TwoPrinters.java
        codingdojang/src/main/java/UglyNumbers.java
        codingdojang/src/main/java/VersionCompare.java
        codingdojang/build.gradle
        gradle/wrapper/gradle-wrapper.jar
        gradle/wrapper/gradle-wrapper.properties
        projectFilesBackup/.idea/workspace.xml
        .gitignore
        build.gradle
        enjoy-algorithm.iml
        gradlew
        gradlew.bat
        README.md
        settings.gradle)

add_executable(enjoy_algorithm ${SOURCE_FILES})